<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hokaze.pathfinderbackgroundgenerator.MainActivity">

    <Spinner
        android:id="@+id/raceSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp"
        android:entries="@array/raceArray"
        android:prompt="@string/selectRace"
        android:spinnerMode="dialog" />

    <Spinner
        android:id="@+id/classSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/raceSpinner"
        android:layout_margin="4dp"
        android:entries="@array/classArray"
        android:prompt="@string/selectClass"
        android:spinnerMode="dialog" />

    <Spinner
        android:id="@+id/alignmentSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/classSpinner"
        android:layout_margin="4dp"
        android:entries="@array/alignmentArray"
        android:prompt="@string/selectAlignment"
        android:spinnerMode="dialog" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/generateButton"
        android:layout_margin="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/alignmentSpinner"
        android:text="@string/generate_background" />

    <TextView
        android:id="@+id/bgTextView"
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/generateButton"
        android:scrollbars="vertical"
        android:text="@string/helpText" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

</RelativeLayout>
